# k_array

./: .gitignore  CMakeLists.txt  README.md
include/echo/: k_array.h
include/echo/k_array/: concept.h  copy.h  dimensionality.h  dimensioned.h  extent.h  iteration.h  k_array.h  k_array_accessor.h  k_array_assignment.h  k_array_concept.h  k_array_initializer.h  k_array_iteration.h  k_array_traits.h  k_array_view.h  k_sequence.h  k_shape.h  k_shape_strides.h  k_subarray_view.h  k_subshape.h  list_form_printer.h  make_subshape.h  shape.h  shape_traits.h  shaped.h  shaped_expression.h  slice.h  subshape.h
include/echo/k_array2/: concept.h  dimensionality.h  dimensioned.h  extent.h  k_array.h  k_array_accessor.h  k_array_fwd.h  k_array_initializer.h  k_array_traits.h  k_array_view.h  k_array_view_fwd.h  make_subshape.h  shape.h  shape_traits.h  shaped.h  slice.h  subshape.h
unittest/: concept_test.cpp  copy_test.cpp  dimensionality_test.cpp  k_array_test.cpp  k_shape_test.cpp  shape_test.cpp  slice_test.cpp
